# iscsid-mac

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
dext/: Info.plist  iSCSIInitiator.cpp  iSCSIInitiator.h
etc/: io.iscsid-mac.plist  iscsid.conf.sample
src/cli/: main.c
src/daemon/: async.c  async.h  auth.c  auth.h  config.c  config.h  connection.c  connection.h  digest.c  digest.h  discovery.c  discovery.h  ipc.c  ipc.h  isns.c  isns.h  login.c  login.h  main.c  nbd.c  nbd.h  pdu.c  pdu.h  persist.c  persist.h  recovery.c  recovery.h  scsi.c  scsi.h  session.c  session.h  taskmgmt.c  taskmgmt.h
src/shared/: iscsi_protocol.h
tests/: e2e_test.sh  test_async.c  test_auth.c  test_config.c  test_digest.c  test_isns.c  test_login.c  test_nbd.c  test_pdu.c  test_persist.c  test_recovery.c  test_scsi.c  test_taskmgmt.c
tests/integration/: test_target.py
